--- a/opts.yml
+++ b/opts.yml
@@ -1,19 +1,22 @@
 name: vanillamlp
-model: mlp
 num_seeds: 10
+mode: singletask
+num_tasks: 3
 selection: rand
 is_shared: true
 batch_norm: false
 epoch: 1000
 batch_size: 500
 learning_rate: 0.00005
+in_size: [12, 12, 24]
+out_size: [12, 12, 24]
 rep_dim: 4
+action_dim: 2
 hidden_dim: 128
 enc_depth_shared: 4
 enc_depth_task: 2
 dec_depth_shared: 2
 dec_depth_task: 1
-in_size: 24
 device: cuda
 load: null
 save: results/training
