--- a/multitask.yml
+++ b/multitask.yml
@@ -1,9 +1,9 @@
-name: vanillamlp
-num_seeds: 1
-mode: singletask
+name: imtl-lp
+num_seeds: 10
+mode: multitask
 tasks: ["push", "hit", "stack"]
 num_tasks: 3
-selection: rand
+selection: lp
 batch_norm: false
 epoch: 1000
 batch_size: 500
@@ -12,12 +12,12 @@ in_size: [12, 12, 24]
 out_size: [12, 12, 24]
 rep_dim: 4
 action_dim: 2
-hidden_dim: 128
+hidden_dim: 4
 enc_depth_shared: 4
 enc_depth_task: 2
 dec_depth_shared: 2
 dec_depth_task: 1
 device: cuda
 load: null
-save: results/training/vanillamlp
+save: results/training/imtl-lp
 task_sequence: null
